--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,6 @@ Repository = "https://github.com/Isi-dev/ComfyUI-Img2DrawingAssistants"
 #  Used by Comfy Registry https://comfyregistry.org
 
 [tool.comfy]
-PublisherId = ""
+PublisherId = "isi-dev"
 DisplayName = "ComfyUI-Img2DrawingAssistants"
 Icon = ""
